--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-          <img src="./images/kalegin-michail-179870-unsplash.jpg" alt="Женщина в плацкарте, иллюстрация Транссибирской магистрали" class="lead__image">
+          <img src="./images/kalegin-michail-179870-unsplash.jpg" alt="Женщина в плацкарте" class="lead__image">
+          <img src="./images/way.svg" alt="Иллюстрация Транссибирской магистрали" class="lead__way">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
       </figure>
+
       </div>
     </section>
     <section class="intro">
